--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -59,7 +59,7 @@
 <!ENTITY Ctr_closetab_5		"Na wšych rejtarkach (wunuźony)">
 <!ENTITY Ctr_closetab_hfot	"Za jaden widobny rejtar schowaś">
 <!ENTITY Ctr_closealt		"Alternatiwny symbol">
-<!ENTITY Ctr_closeonleft	"Alternatiwna pozcija na rejtarku">
+<!ENTITY Ctr_closeonleft	"Alternatiwna pozicija na rejtarku">
 <!ENTITY Ctr_close_wwltab	"Wokno ze slědnym widobnym rejtarkom zacyniś (about:config)">
 
 <!ENTITY Ctr_appbutton		"Nałožeński tłocašk">
@@ -129,6 +129,7 @@
 <!ENTITY Ctr_hidezoomres	"Skalěrowańske elementy na symbolowej rědce: Tłocašk za slědkstajenje skalěrowanja schowaś">
 <!ENTITY Ctr_alt_newtabp	"Bok nowego rejtarka: alternatiwne wuglědanje">
 <!ENTITY Ctr_noresizerxp	"Pśeměnjak wjelikosći schowaś (Windows XP)">
+<!ENTITY Ctr_extraurlkeycb	"Pśidatne adresowe pólo wócyniś (Cmd/Strg+">
 <!ENTITY Ctr_pmhidelabels	"Pólowy meni: Tekst tłocaškow schowaś">
 <!ENTITY Ctr_menupopupscr	"Wuskokujuce menije: suwate rědki město suwatych šypkow pokazaś">
 
@@ -267,3 +268,8 @@
 <!ENTITY Ctr_openInPrivateWindow	"W nowem priwatnem woknje wócyniś">
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Prědne kšace">
+
+<!-- Fallback entities. Leave empty! -->
+<!ENTITY openCmd.commandkey			"">
+<!ENTITY urlbar.accesskey			"">
+<!ENTITY urlbar.placeholder2		"">
