Feature: No text shadow on persona themes.
This removes the text shadow on persona themes.

--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -273,3 +273,5 @@
 <!ENTITY openCmd.commandkey			"">
 <!ENTITY urlbar.accesskey			"">
 <!ENTITY urlbar.placeholder2		"">
+
+<!ENTITY ctr_personanoshadow	"Enlever les ombres au texte des thèmes Persona.">
