--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -274,3 +274,5 @@
 <!ENTITY openCmd.commandkey			"">
 <!ENTITY urlbar.accesskey			"">
 <!ENTITY urlbar.placeholder2		"">
+
+<!ENTITY ctr_personanoshadow	"Remove text shadow on persona themes">
