--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -273,3 +273,5 @@
 <!ENTITY openCmd.commandkey			"">
 <!ENTITY urlbar.accesskey			"">
 <!ENTITY urlbar.placeholder2		"">
+
+<!ENTITY ctr_personanoshadow	"Remove text shadow on persona themes">
