--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -220,6 +220,7 @@
 <!ENTITY Ctr_nonavborder	"Bogmærkelinje: tilføj kant for oven på værktøjslinjen">
 <!ENTITY Ctr_nonavtbborder	"Øverste værktøjslinjer: fjern kanten på værktøjsline">
 <!ENTITY Ctr_hidesbclose	"Sidepaneler: skjul luk knappen på sidepanel">
+<!ENTITY Ctr_notextshadow	"Toolbars: hide shadow for toolbar text and tab text">
 <!ENTITY Ctr_chevronfix		"Navigationslinje: skjul dobbelt-pil på værktøjslinjernes slutning">
 
 <!ENTITY Ctr_closeabarbut	"Skjul luk-knap på tilføjelseslinjer">
