--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -220,6 +220,7 @@
 <!ENTITY Ctr_nonavborder	"Aggiungi bordo superiore alla barra dei segnalibri">
 <!ENTITY Ctr_nonavtbborder	"Rimuovi i bordi alle barre degli strumenti posizionate in alto">
 <!ENTITY Ctr_hidesbclose	"Barre laterali: nascondi il pulsante di chiusura della barra laterale">
+<!ENTITY Ctr_notextshadow	"Toolbars: hide shadow for toolbar text and tab text">
 <!ENTITY Ctr_chevronfix		"Barra di navigazione: nascondi la doppia freccia ('chevron') all'estremità delle barre">
 
 <!ENTITY Ctr_closeabarbut	"Nascondi il pulsante di chiusura">
