--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -201,6 +201,7 @@
 <!ENTITY Ctr_dblclnewtab	"Doppelklick öffnet einen neuen Tab (und beachtet 'browser.newtab.url')">
 <!ENTITY Ctr_hidetbwot		"Verstecke Tableiste mit nur einem sichtbaren Tab">
 <!ENTITY Ctr_hidetbwote		"Verzögerung beim Start reduzieren">
+<!ENTITY Ctr_hidetbwote2	"Titelleiste beibehalten (Tabs oben)">
 <!ENTITY Ctr_notabfog		"Hintergrundnebel entfernen (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_notabbg		"Hintergrundfarbe entfernen (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_hightabpos		"Höhere Position (falls möglich)">
@@ -250,6 +251,11 @@
 <!ENTITY Ctr_fx34loop		"Mit Firefox 34+ wurden 'Anruf- und Konversations-Funktionen' eingeführt. Das Deaktivieren dieser Option entfernt diese Funktionen.">
 <!ENTITY Ctr_fx35devtheme	"Mit Firefox 35+ wurde ein neues 'Entwickler-Thema' eingeführt. Das Deaktivieren dieser Optionen stellt das 'Standard-Thema' wieder her und entfernt die zugehörige Schaltfläche im Modus 'Anpassen'.">
 <!ENTITY Ctr_fx36prefs		"Mit Firefox 36+ wurden 'Einstellungen im Tab' eingeführt. Das Deaktivieren dieser Option stellt das 'alte' Einstellungsfenster wieder her.">
+<!ENTITY Ctr_e_omtc			"OMTC / Problem mit 'einfrierenden Tabs'">
+<!ENTITY Ctr_e_searchui		"Suchoberfläche">
+<!ENTITY Ctr_e_loop			"Anruf- und Konversations-Funktionen">
+<!ENTITY Ctr_e_deved		"Entwickler-Thema">
+<!ENTITY Ctr_e_prefsui		"Einstellungen im Tab">
 
 
 <!ENTITY Ctr_pw_settings	"Einstellungen">
