--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -201,6 +201,7 @@
 <!ENTITY Ctr_dblclnewtab	"双击新建标签页 (使用 browser.newtab.url 设置)">
 <!ENTITY Ctr_hidetbwot		"当只有一个标签页时隐藏标签页栏">
 <!ENTITY Ctr_hidetbwote		"启动时减少隐藏延迟">
+<!ENTITY Ctr_hidetbwote2	"Keep titlebar (tabs on top)">
 <!ENTITY Ctr_notabfog		"移除背景模糊 (Windows AeroGlass/8)">
 <!ENTITY Ctr_notabbg		"移除背景颜色 (Windows AeroGlass/8)">
 <!ENTITY Ctr_hightabpos		"减少工具栏上方空间 (如果可以)">
@@ -250,6 +251,11 @@
 <!ENTITY Ctr_fx34loop		"Firefox 34+ 引入“呼叫和通话”功能。不选中此项以移除它们。">
 <!ENTITY Ctr_fx35devtheme	"Firefox 35+ 引入新的“开发者主题”。不选中此项以禁用“开发者主题”以及定制模式下它的一些按钮。">
 <!ENTITY Ctr_fx36prefs		"Firefox 36+ 引入在标签页中显示选项设置。不选中此项以使用旧选项窗口。">
+<!ENTITY Ctr_e_omtc			"OMTC / hanging tabs issue">
+<!ENTITY Ctr_e_searchui		"Search appearance">
+<!ENTITY Ctr_e_loop			"Calling and conversation">
+<!ENTITY Ctr_e_deved		"Developer Edition Theme">
+<!ENTITY Ctr_e_prefsui		"Preferences in tab">
 
 
 <!ENTITY Ctr_pw_settings	"设置">
