--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -201,6 +201,7 @@
 <!ENTITY Ctr_dblclnewtab	"Clicar Duas Vezes para Abrir a 'Nova' Aba (Usando navegador.novaguia.URL)">
 <!ENTITY Ctr_hidetbwot		"Ocultar as Barras de Abas com uma Aba">
 <!ENTITY Ctr_hidetbwote		"Reduzir o Atraso ao Ocultar na Inicialização">
+<!ENTITY Ctr_hidetbwote2	"Keep titlebar (tabs on top)">
 <!ENTITY Ctr_notabfog		"Remover a Névoa do Fundo (Windows AeroGlass/Win8)">
 <!ENTITY Ctr_notabbg		"Remover a Cor do Fundo (Windows AeroGlass/Win8)">
 <!ENTITY Ctr_hightabpos		"Reduzir o Espaço Acima da Barra (Se Possível)">
@@ -250,6 +251,11 @@
 <!ENTITY Ctr_fx34loop		"O Firefox 34+ Introduziu Recursos de 'Chamada e Conversação'. Desmarque esta Opção para Removê-los.">
 <!ENTITY Ctr_fx35devtheme	"O Firefox 35+ Introduziu um Novo 'Tema do Desenvolvedor'. Desmarque estas Opções para Desabilitar o 'Tema do Desenvolvedor' e o seu Botão em Modo de Personalização.">
 <!ENTITY Ctr_fx36prefs		"O Firefox 36+ Introduziu as Preferências em uma Nova Aba. Desmarque esta Opção para Retornar à Antiga Janela de Preferências.">
+<!ENTITY Ctr_e_omtc			"OMTC / hanging tabs issue">
+<!ENTITY Ctr_e_searchui		"Search appearance">
+<!ENTITY Ctr_e_loop			"Calling and conversation">
+<!ENTITY Ctr_e_deved		"Developer Edition Theme">
+<!ENTITY Ctr_e_prefsui		"Preferences in tab">
 
 
 <!ENTITY Ctr_pw_settings	"Configurações">
